<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        />
    <ListPreference
          android:key="@string/pref_unit_key"
          android:title="@string/pref_unit_label"
          android:entries="@array/convertList"
          android:defaultValue="metric"
        android:summary="@string/pref_unit_default"
          android:dialogTitle="@string/pref_dialogunit_label"
          android:entryValues="@array/convertReturnValue"
        />

</PreferenceScreen>